Updated so that it retrieves both name and state. Updated documentation.
