# swagger.yaml
@@ -62,13 +62,13 @@ paths:
           description: Device image URL retrieved successfully
         500:
           description: Error retrieving device image URL
-  /devices/name:
+  /devices/state:
       get:
-        summary: Get All Device Names
-        description: Retrieves a list of all device names stored in the database.
+        summary: Get All Device Names and their current state
+        description: Retrieves a list of all device names and their state stored in the database.
         responses:
           200:
-            description: A list of device names successfully retrieved.
+            description: A list of device were successfully retrieved.
             schema:
               type: object
               properties:
@@ -77,4 +77,4 @@ paths:
                   items:
                     type: string
           500:
-            description: Error fetching device names.
+            description: Error fetching devices.
